--- a/8.cfg
+++ b/8.cfg
@@ -16,6 +16,7 @@ cl_dummy_hook 0
 cl_dummy_control 0
 cl_dummy_jump 0
 cl_dummy_restore_weapon 0
+cl_nameplates_strong 2
 ui_mousesens 100
 inp_mousesens 75
 steam_name roor48
@@ -46,9 +47,11 @@ bind n "bind mouse3 \"say /r\"; say /practice"
 
 # useful settings
 bind mouse3 kill
+bind mouse5 say /invincible
+
 bind ctrl+mouse3 "bind mouse3 \"kill\"; echo mouse3 is kill"
 
-bind pageup "toggle cl_nameplates_strong 0 2; toggle cl_overlay_entities 0 100"
+bind pageup "toggle cl_overlay_entities 0 100"
 bind u "toggle cl_show_hook_coll_other 1 2"
 bind z "toggle cl_default_zoom 8 2; zoom"
 bind lshift +emote
