8.cfg 정리 & restore_weapon on off 키 추가 및 /lasttp 키 추가

--- a/8.cfg
+++ b/8.cfg
@@ -1,8 +1,12 @@
+# unbind all binds
+unbindall
+
 # exec others
 exec bind/resetonswitch.cfg
 exec bind/fly_mode.cfg
 exec bind/twohandmode.cfg
 exec bind/dummycopy1.cfg
+exec bind/restore_weapon_off.cfg
 
 # settings
 cl_dummy_resetonswitch 1
@@ -22,54 +26,75 @@ inp_mousesens 75
 steam_name roor48
 player_name roor48
 dummy_name droor48
+player_clan owls
+player_country 410
 
 
-# delete or change default settings
-unbind f10
-unbind i
-unbind pause
-unbind kp_multiply
-bind q say /pause
 
+# default settings
+bind q "say /pause"
+bind x "toggle cl_dummy 0 1"
+bind tab "+scoreboard"
+bind 1 "+weapon1"
+bind 2 "+weapon2"
+bind 3 "+weapon3"
+bind 4 "+weapon4"
+bind 5 "+weapon5"
+bind kp_plus "zoom+"
+bind kp_minus "zoom-"
+bind lshift "+emote"
+bind lctrl "+spectate"
+bind f1 "toggle_local_console"
+bind f2 "toggle_remote_console"
+bind s "+showhookcoll"
+bind return "chat all"
+bind slash "chat team"
+bind pageup "toggle cl_overlay_entities 0 100"
+bind b "say /top5"
+bind f3 "vote yes"
+bind f4 "vote no"
+bind equals "spectate_next"
+bind minus "spectate_previous"
 
-# movements
-bind ctrl+d "+jump; +right"
+bind a "+left"
+bind d "+right"
+bind left "+left"
+bind right "+right"
 bind ctrl+a "+jump; +left"
+bind ctrl+d "+jump; +right"
+bind space "+jump"
+bind up "+jump"
 
-
-# commands
-bind h say /tp
-bind b say /top
-bind p say /spec
-bind m say /showothers
-bind n "bind mouse3 \"say /r\"; say /practice"
+bind mouse1 "+fire"
+bind mouse2 "+hook"
+bind mouse3 "kill"
+bind mouse5 "say /invincible"
+bind mousewheelup "+nextweapon"
+bind mousewheeldown "+prevweapon"
 
 
 # useful settings
-bind mouse3 kill
-bind mouse5 say /invincible
-
 bind ctrl+mouse3 "bind mouse3 \"kill\"; echo mouse3 is kill"
 
-bind pageup "toggle cl_overlay_entities 0 100"
-bind u "toggle cl_show_hook_coll_other 1 2"
+bind h "say /tp"
+bind r "say /lasttp"
+bind p "say /spec"
+bind m "say /showothers"
+bind n "bind mouse3 \"say /r\"; say /practice"
+
 bind z "toggle cl_default_zoom 8 2; zoom"
-bind lshift +emote
-bind lctrl +spectate
-bind s +showhookcoll
-bind g emote 2
-bind return "chat all"
-bind slash "chat all"
-bind grave +show_chat
-bind o translate
+bind g "emote 2"
+
+bind grave "+show_chat"
+bind o "translate"
 
 bind kp_1 "cl_dummy 1; say /team 31; say /team 32; say /team 33; cl_dummy 0; say /team 31; say /team 32; say /team 33"
-bind kp_2 say /team 0
-bind kp_3 say /lock
-bind kp_4 emote 14
-bind kp_5 emote 5
-bind kp_6 emote 3
-bind kp_7 emote 13
-bind kp_8 emote 1
+bind kp_2 "say /team 0"
+bind kp_3 "say /lock"
+bind kp_4 "emote 14"
+bind kp_5 "emote 5"
+bind kp_6 "emote 3"
+bind kp_7 "emote 13"
+bind kp_8 "emote 1"
 
 bind w "+toggle cl_mouse_max_distance 2 400; +toggle inp_mousesens 1 75; +showhookcoll"
