--- a/fly_mode.cfg
+++ b/fly_mode.cfg
@@ -1,5 +1,9 @@
 bind ctrl+f "exec bind/Dcon.cfg; echo **dcon mode**"
 cl_dummy_control 0
+cl_dummy_hook 0
+cl_dummy_control 0
+cl_dummy_jump 0
+cl_dummy_restore_weapon 0
 
 #--------------------------------------------------------------------------------------------------------------------------------------------------------------------
 ##Deep
@@ -14,15 +18,7 @@ bind t "bind mouse1 \"+toggle cl_dummy_hammer 1 0\"; echo hdf on; cl_dummy_resto
 
 bind f "bind mouse1 \"+fire\"; echo Normal hammer; bind mouse2 \"+hook\""
 #--------------------------------------------------------------------------------------------------------------------------------------------------------------------
-##DLasder
-bind r "bind mouse1 \"+fire; +toggle cl_dummy_hammer 1 0\"; echo Dlaser On; cl_dummy_restore_weapon 1"
-#--------------------------------------------------------------------------------------------------------------------------------------------------------------------
-bind v "+fire; +toggle cl_dummy_hammer 1 0"
-#----------------------------------------------------
+## Both Hammer
 
-##hitfly
+bind v "+fire; +toggle cl_dummy_hammer 1 0"
 #--------------------------------------------------------------------------------------------------------------------------------------------------------------------
-cl_dummy_hook 0
-cl_dummy_control 0
-cl_dummy_jump 0
-cl_dummy_restore_weapon 0
