--- a/Dcon.cfg
+++ b/Dcon.cfg
@@ -6,7 +6,7 @@ bind f "+toggle cl_dummy_jump 1 0"
 # --------------------------------------------------------------------------
 bind e "+toggle cl_dummy_hook 1 0"
 # --------------------------------------------------------------------------
-bind r "bind mouse1 \"+fire; +toggle cl_dummy_hammer 1 0\"; echo deepfly on; cl_dummy_restore_weapon 0"
+bind t "bind mouse1 \"+fire; +toggle cl_dummy_hammer 1 0\"; echo deepfly on; cl_dummy_restore_weapon 0"
 # --------------------------------------------------------------------------
 bind v "+toggle cl_dummy_fire 1 0"
 
