--- a/8.cfg
+++ b/8.cfg
@@ -7,6 +7,7 @@ exec bind/fly_mode.cfg
 exec bind/twohandmode.cfg
 exec bind/dummycopy1.cfg
 exec bind/restore_weapon_off.cfg
+exec bind/ddrace.cfg
 exec bind/kog.cfg
 
 # settings
