로그인 명령어 파일 이름 변경

--- a/8.cfg
+++ b/8.cfg
@@ -8,7 +8,7 @@ exec bind/twohandmode.cfg
 exec bind/dummycopy1.cfg
 exec bind/restore_weapon_off.cfg
 exec bind/ddrace.cfg
-exec bind/kog.cfg
+exec bind/secret.cfg
 
 # settings
 cl_dummy_resetonswitch 1
