added 3wide edge corrdinates

--- a/8.cfg
+++ b/8.cfg
@@ -8,6 +8,7 @@ exec bind/twohandmode.cfg
 exec bind/dummycopy1.cfg
 exec bind/restore_weapon_off.cfg
 exec bind/ddrace.cfg
+exec bind/dummycopy1.cfg
 exec bind/secret.cfg
 
 # settings
@@ -100,3 +101,6 @@ bind kp_7 "emote 13"
 bind kp_8 "emote 1"
 
 bind w "+toggle cl_mouse_max_distance 2 400; +toggle inp_mousesens 1 75; +showhookcoll"
+
+# 3wide edge corrdinates
+bind leftbracket "echo 63 66 81 | 16 31 34"
