기본 세팅 값 추가

--- a/8.cfg
+++ b/8.cfg
@@ -31,7 +31,11 @@ player_name roor48
 dummy_name droor48
 player_clan owls
 player_country 410
-
+cl_autoswitch_weapons 1
+cl_vanilla_skins_only 1
+cl_showhud_player_position 1
+cl_showhud_player_angle 1
+cl_spec_auto_sync 1
 
 
 # default settings
