동시 훅, 이동 바인드 추가

--- a/8.cfg
+++ b/8.cfg
@@ -69,6 +69,10 @@ bind left "+left"
 bind right "+right"
 bind ctrl+a "+jump; +left"
 bind ctrl+d "+jump; +right"
+bind alt+a "+hook; +left"
+bind alt+d "+hook; +right"
+bind ctrl+alt+a "+jump; +hook; +left"
+bind ctrl+alt+d "+jump; +hook; +right"
 bind space "+jump"
 bind up "+jump"
 
