플라이 바인드 echo 메세지 변경

--- a/fly_mode.cfg
+++ b/fly_mode.cfg
@@ -6,19 +6,16 @@ cl_dummy_jump 0
 cl_dummy_restore_weapon 0
 
 #--------------------------------------------------------------------------------------------------------------------------------------------------------------------
-##Deep
-
-bind e "bind mouse1 \"+fire; +toggle cl_dummy_hammer 1 0\"; echo Deep on; cl_dummy_restore_weapon 0"
+## both hammer
+bind e "bind mouse1 \"+fire; +toggle cl_dummy_hammer 1 0\"; echo both hammer; cl_dummy_restore_weapon 0"
 #--------------------------------------------------------------------------------------------------------------------------------------------------------------------
-##HDF
-
-bind t "bind mouse1 \"+toggle cl_dummy_hammer 1 0\"; echo hdf on; cl_dummy_restore_weapon 0"
+## dummy hammer
+bind t "bind mouse1 \"+toggle cl_dummy_hammer 1 0\"; echo dummy hammer; cl_dummy_restore_weapon 0"
 #--------------------------------------------------------------------------------------------------------------------------------------------------------------------
-##Normal
-
-bind f "bind mouse1 \"+fire\"; echo Normal hammer; bind mouse2 \"+hook\""
+## default
+bind f "bind mouse1 \"+fire\"; echo default hammer; bind mouse2 \"+hook\""
 #--------------------------------------------------------------------------------------------------------------------------------------------------------------------
-## Both Hammer
-
+## both hammer
 bind v "+fire; +toggle cl_dummy_hammer 1 0"
 #--------------------------------------------------------------------------------------------------------------------------------------------------------------------
+v
