딥플 시 cl_dummy_restore_weapon 꺼지던 현상 해결

--- a/fly_mode.cfg
+++ b/fly_mode.cfg
@@ -7,10 +7,10 @@ cl_dummy_restore_weapon 0
 
 #--------------------------------------------------------------------------------------------------------------------------------------------------------------------
 ## both hammer
-bind e "bind mouse1 \"+fire; +toggle cl_dummy_hammer 1 0\"; echo both hammer; cl_dummy_restore_weapon 0"
+bind e "bind mouse1 \"+fire; +toggle cl_dummy_hammer 1 0\"; echo both hammer"
 #--------------------------------------------------------------------------------------------------------------------------------------------------------------------
 ## dummy hammer
-bind t "bind mouse1 \"+toggle cl_dummy_hammer 1 0\"; echo dummy hammer; cl_dummy_restore_weapon 0"
+bind t "bind mouse1 \"+toggle cl_dummy_hammer 1 0\"; echo dummy hammer"
 #--------------------------------------------------------------------------------------------------------------------------------------------------------------------
 ## default
 bind f "bind mouse1 \"+fire\"; echo default hammer; bind mouse2 \"+hook\""
