--- a/8.cfg
+++ b/8.cfg
@@ -10,6 +10,7 @@ exec bind/restore_weapon_off.cfg
 exec bind/ddrace.cfg
 exec bind/dummycopy1.cfg
 exec bind/secret.cfg
+exec bind/kaomoji.cfg
 
 # settings
 cl_dummy_resetonswitch 1
